--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Watercolour Gallery</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>My Watercolour Paintings</h1>
+  <p>Welcome to my little art space!</p>
+
+  <img src="painting1.jpg" alt="Watercolour painting 1" />
+  <img src="painting2.jpg" alt="Watercolour painting 2" />
+</body>
+</html>
 
