--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
   <h1>My Watercolour Paintings</h1>
   <p>Welcome to my little art space!</p>
 
-  <img src="painting1.jpg" alt="Watercolour painting 1" />
-  <img src="painting2.jpg" alt="Watercolour painting 2" />
+  <img src="IMG_8550.jpg" alt="Watercolour painting 1" />
+  <img src="IMG_8501.jpg" alt="Watercolour painting 2" />
+   <img src="IMG_8442.jpg" alt="Watercolour painting 2" />
+   <img src="IMG_8442 2.jpg" alt="Watercolour painting 2" />
+  <img src="IMG_8379 4.jpg" alt="Watercolour painting 2" />
+  <img src="IMG_8379 3.jpg" alt="Watercolour painting 2" />
 </body>
 </html>
 
