--- a/index.html
+++ b/index.html
@@ -3,31 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Watercolour Gallery</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <title>My Art Gallery</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>My Watercolour Paintings</h1>
-  <p>Welcome to my little art space!</p>
+  <header>
+    <h1>My Paintings</h1>
+  </header>
 
-  <img src="IMG_8550.jpg" alt="Watercolour painting 1" />
+  <main class="gallery">
+    <!-- Add images like this -->
+    <img src="IMG_8550.jpg" alt="Watercolour painting 1" />
   <img src="IMG_8501.jpg" alt="Watercolour painting 2" />
    <img src="IMG_8442.jpg" alt="Watercolour painting 2" />
    <img src="IMG_8442 2.jpg" alt="Watercolour painting 2" />
   <img src="IMG_8379 4.jpg" alt="Watercolour painting 2" />
   <img src="IMG_8379 3.jpg" alt="Watercolour painting 2" />
+    <!-- Keep adding -->
+  </main>
 </body>
 </html>
-
