--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Art Gallery</title>
+  <title>Gallery</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>My Paintings</h1>
+    <h1>Watercolours</h1>
   </header>
 
   <main class="gallery">
     <!-- Add images like this -->
     <img src="IMG_8550.jpg" alt="Watercolour painting 1" />
+       <figcaption>‘A Moment in March’ </figcaption>
+  </figure>
   <img src="IMG_8501.jpg" alt="Watercolour painting 2" />
-   <img src="IMG_8442.jpg" alt="Watercolour painting 2" />
-   <img src="IMG_8442 2.jpg" alt="Watercolour painting 2" />
-  <img src="IMG_8379 4.jpg" alt="Watercolour painting 2" />
-  <img src="IMG_8379 3.jpg" alt="Watercolour painting 2" />
+      <figcaption>‘Starlings Leave the Tree Line’ </figcaption>
+  </figure>
+   <img src="IMG_8442.jpg" alt="Watercolour painting 3" />
+    <figcaption>'‘An Angler Waits in Aldeburgh Bay’' </figcaption>
+  </figure>
+   <img src="IMG_8379.jpg" alt="Watercolour painting 4" />
+    <figcaption>'‘Iken Marsh, Evening Light’' </figcaption>
+  </figure>
+  <img src="IMG_8630.jpg" alt="Watercolour painting 2" />
+    <figcaption>'‘Low Tide at Orford Quay’' </figcaption>
+  </figure>
     <!-- Keep adding -->
   </main>
 </body>
