--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
   <title>Gallery</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelectorAll(".gallery img").forEach(img => {
+      img.addEventListener("click", () => {
+        const overlay = document.createElement("div")
+        overlay.style = `
+          position: fixed;
+          top: 0; left: 0;
+          width: 100vw; height: 100vh;
+          background: rgba(0, 0, 0, 0.8);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          z-index: 9999;
+        `
+        const fullImg = document.createElement("img")
+        fullImg.src = img.src
+        fullImg.style = "max-width: 90vw; max-height: 90vh; border-radius: 8px;"
+        overlay.appendChild(fullImg)
+
+        overlay.addEventListener("click", () => overlay.remove())
+        document.body.appendChild(overlay)
+      })
+    })
+  })
+</script>
 <body>
   <header>
     <h1>Watercolours</h1>
