--- a/index.html
+++ b/index.html
@@ -39,20 +39,26 @@
 
   <main class="gallery">
     <!-- Add images like this -->
-    <img src="IMG_8550.jpg" alt="Watercolour painting 1" />
+    <img src="IMG_8550.jpg" alt="Watercolour painting 1" loading="lazy" />
        <figcaption>‘A Moment in March’ </figcaption>
   </figure>
-  <img src="IMG_8501.jpg" alt="Watercolour painting 2" />
+  <img src="IMG_8501.jpg" alt="Watercolour painting 2" loading="lazy" />
       <figcaption>‘Starlings Leave the Tree Line’ </figcaption>
   </figure>
-   <img src="IMG_8442.jpg" alt="Watercolour painting 3" />
+   <img src="IMG_8442.jpg" alt="Watercolour painting 3" loading="lazy" />
     <figcaption>'‘An Angler Waits in Aldeburgh Bay’' </figcaption>
   </figure>
-   <img src="IMG_8379.jpg" alt="Watercolour painting 4" />
+   <img src="IMG_8379.jpg" alt="Watercolour painting 4" loading="lazy" />
     <figcaption>'‘Iken Marsh, Evening Light’' </figcaption>
   </figure>
-  <img src="IMG_8630.jpg" alt="Watercolour painting 2" />
+    <img src="IMG_8123.jpg" alt="Watercolour painting 5" loading="lazy" />
+    <figcaption>'Close Up: ‘Iken Marsh, Evening Light’' </figcaption>
+  </figure>
+  <img src="IMG_8630.jpg" alt="Watercolour painting 6" loading="lazy" />
     <figcaption>'‘Low Tide at Orford Quay’' </figcaption>
+  </figure>
+    <img src="IMG_1234.jpg" alt="Watercolour painting 7" loading="lazy" />
+    <figcaption>'Close Up: ‘Low Tide at Orford Quay’' </figcaption>
   </figure>
     <!-- Keep adding -->
   </main>
