--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
   <img src="IMG_8630.jpg" alt="Watercolour painting 6" loading="lazy" />
     <figcaption>'‘Low Tide at Orford Quay’' </figcaption>
   </figure>
+    <img src="IMG_8379 2.jpg" alt="Watercolour painting 6" loading="lazy" />
+    <figcaption>'‘Close Up: Low Tide at Orford Quay’' </figcaption>
+  </figure>
     <img src="IMG_1234.jpg" alt="Watercolour painting 7" loading="lazy" />
     <figcaption>'Close Up: ‘Low Tide at Orford Quay’' </figcaption>
   </figure>
