--- a/index.html
+++ b/index.html
@@ -39,28 +39,31 @@
 
   <main class="gallery">
     <!-- Add images like this -->
-    <img src="IMG_8550.jpg" alt="Watercolour painting 1" loading="lazy" />
+    <img src="IMG_8550.png" alt="Watercolour painting 1" loading="lazy" />
        <figcaption>‘A Moment in March’ </figcaption>
   </figure>
-  <img src="IMG_8501.jpg" alt="Watercolour painting 2" loading="lazy" />
+  <img src="IMG_8501.png" alt="Watercolour painting 2" loading="lazy" />
       <figcaption>‘Starlings Leave the Tree Line’ </figcaption>
   </figure>
-   <img src="IMG_8442.jpg" alt="Watercolour painting 3" loading="lazy" />
+   <img src="IMG_8442.png" alt="Watercolour painting 3" loading="lazy" />
     <figcaption>'‘An Angler Waits in Aldeburgh Bay’' </figcaption>
   </figure>
-   <img src="IMG_8379.jpg" alt="Watercolour painting 4" loading="lazy" />
+   <img src="IMG_8379.png" alt="Watercolour painting 4" loading="lazy" />
     <figcaption>'‘Iken Marsh, Evening Light’' </figcaption>
   </figure>
-    <img src="IMG_8123.jpg" alt="Watercolour painting 5" loading="lazy" />
+    <img src="IMG_8123.png" alt="Watercolour painting 5" loading="lazy" />
     <figcaption>'Close Up: ‘Iken Marsh, Evening Light’' </figcaption>
   </figure>
-  <img src="IMG_8630.jpg" alt="Watercolour painting 6" loading="lazy" />
+      <img src="IMG_8094.png" alt="Watercolour painting 6" loading="lazy" />
+    <figcaption>'‘Winter Tree Line’' </figcaption>
+  </figure>
+  <img src="IMG_8630.png" alt="Watercolour painting 7" loading="lazy" />
     <figcaption>'‘Low Tide at Orford Quay’' </figcaption>
   </figure>
-    <img src="IMG_8379 2.jpg" alt="Watercolour painting 6" loading="lazy" />
+    <img src="IMG_8379 2.png" alt="Watercolour painting 8" loading="lazy" />
     <figcaption>'‘Close Up: Low Tide at Orford Quay’' </figcaption>
   </figure>
-    <img src="IMG_1234.jpg" alt="Watercolour painting 7" loading="lazy" />
+    <img src="IMG_1234.png" alt="Watercolour painting 9" loading="lazy" />
     <figcaption>'Close Up: ‘Low Tide at Orford Quay’' </figcaption>
   </figure>
     <!-- Keep adding -->
