--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </figure>
 
     <figure>
-      <img src="IMG_8628.png" alt="Watercolour painting 3" loading="lazy" />
+      <img src="IMG_8628.png" alt="Watercolour painting 3" />
       <figcaption>‘An Angler Waits in Aldeburgh Bay’</figcaption>
     </figure>
 
@@ -48,12 +48,12 @@
     </figure>
 
     <figure>
-      <img src="IMG_8379 2.png" alt="Watercolour painting 8" loading="lazy" />
+      <img src="IMG_8379 2.png" alt="Watercolour painting 8"  />
       <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
     </figure>
 
     <figure>
-      <img src="IMG_81234.png" alt="Watercolour painting 9" loading="lazy" />
+      <img src="IMG_81234.png" alt="Watercolour painting 9"  />
       <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
     </figure>
   </main>
