--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </figure>
 
     <figure>
-      <img src="IMG_8379 2.png" alt="Watercolour painting 8"  />
+      <img src="IMG_8379 2.jpeg" alt="Watercolour painting 8"  />
       <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
     </figure>
 
