--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <section class="about">
     <h2>About the Artist</h2>
     <p>
-      <!-- ✏️ Drop your bio text here -->
-      Simon Goodwin is a watercolour artist based in... [your content here]
+      <!-- Simon Goodwin is a watercolour artist based in Woodbridge, Suffolk, UK. -->
     </p>
   </section>
 
