--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="about">
     <h2>About the Artist</h2>
     <p>
-      <!-- Simon Goodwin is a watercolour artist based in Woodbridge, Suffolk, UK. -->
+      < Simon Goodwin is a watercolour artist based in Woodbridge, Suffolk, UK. >
     </p>
   </section>
 
