--- a/index.html
+++ b/index.html
@@ -19,42 +19,42 @@
   </section>
 
   <main class="gallery">
-    <figure>
+    <figure class="fade-in">
       <img src="IMG_8550.png" alt="Watercolour painting 1" loading="lazy" />
       <figcaption>‘A Moment in March’</figcaption>
     </figure>
 
-    <figure>
+  <figure class="fade-in">
       <img src="IMG_8501.png" alt="Watercolour painting 2" loading="lazy" />
       <figcaption>‘Starlings Leave the Tree Line’</figcaption>
     </figure>
 
-    <figure>
+<figure class="fade-in">
       <img src="IMG_8628.png" alt="Watercolour painting 3" loading="lazy" />
       <figcaption>‘An Angler Waits in Aldeburgh Bay’</figcaption>
     </figure>
 
-    <figure>
+   <figure class="fade-in">
       <img src="IMG_8379.png" alt="Watercolour painting 4" loading="lazy" />
       <figcaption>‘Iken Marsh, Evening Light’</figcaption>
     </figure>
 
-    <figure>
+ <figure class="fade-in">
       <img src="IMG_8123.png" alt="Watercolour painting 5" loading="lazy" />
       <figcaption>Close Up: ‘Iken Marsh, Evening Light’</figcaption>
     </figure>
 
-    <figure>
+    <figure class="fade-in">
       <img src="IMG_8094.png" alt="Watercolour painting 6" loading="lazy" />
       <figcaption>‘Winter Tree Line’</figcaption>
     </figure>
 
-    <figure>
+ <figure class="fade-in">
       <img src="IMG_8630.png" alt="Watercolour painting 7" loading="lazy" />
       <figcaption>‘Low Tide at Orford Quay’</figcaption>
     </figure>
 
-    <figure>
+  <figure class="fade-in">
       <img src="IMG_81234.png" alt="Watercolour painting 9" loading="lazy" />
       <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
     </figure>
@@ -84,6 +84,46 @@
         })
       })
     })
-  </script>
+ <script>
+  // Modal zoom (existing)
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelectorAll(".gallery img").forEach(img => {
+      img.addEventListener("click", () => {
+        const overlay = document.createElement("div")
+        overlay.style = `
+          position: fixed;
+          top: 0; left: 0;
+          width: 100vw; height: 100vh;
+          background: rgba(0, 0, 0, 0.8);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          z-index: 9999;
+        `
+        const fullImg = document.createElement("img")
+        fullImg.src = img.src
+        fullImg.style = "max-width: 90vw; max-height: 90vh; border-radius: 8px;"
+        overlay.appendChild(fullImg)
+        overlay.addEventListener("click", () => overlay.remove())
+        document.body.appendChild(overlay)
+      })
+    })
+
+    // Fade-in animation
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible")
+          observer.unobserve(entry.target)
+        }
+      })
+    }, { threshold: 0.1 })
+
+    document.querySelectorAll(".fade-in").forEach(el => {
+      observer.observe(el)
+    })
+  })
+</script>
+
 </body>
 </html>
