--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <h1>Watercolours</h1>
+    <h1>Simon Goodwin Watercolours</h1>
   </header>
 
   <section class="about">
     <h2>About the Artist</h2>
     <p>
-      Simon Goodwin is a UK watercolour artist based in Woodbridge, Suffolk.
+      Simon is a UK watercolour artist based in Woodbridge, Suffolk.
     </p>
   </section>
 
