--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
   <title>Simon Goodwin Watercolours</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  <footer>
+ <footer>
   <p>Interested in a painting or commission?</p>
   <p>
     Email: <a href="#" id="email">[click to reveal]</a><br />
     Phone: <span id="phone">[click to reveal]</span>
   </p>
+  <p>
+    Follow on Instagram:
+    <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
+      @yourusername
+    </a>
+  </p>
 </footer>
+
 
 <body>
   <header>
