--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>
     Follow on Instagram:
     <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
-      @yourusername
+      @simonsimonralphralph
     </a>
   </p>
 </footer>
