--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     })
   })
     // Contact reveal (anti-spam)
-const email = "simonralphgoodwin@googlemail.com"
+const email = "simonralphgoodwin@gmail.com"
 const phone = "+44 7307 163 308"
 
 document.getElementById("email").addEventListener("click", e => {
