--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     Phone: <span id="phone">[click to reveal]</span>
   </p>
   <p>
-    Follow on Instagram:
-    <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
+    📸 <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
       @simonsimonralphralph
     </a>
   </p>
 </footer>
+
 
 
 <body>
