--- a/index.html
+++ b/index.html
@@ -7,86 +7,72 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Simon Goodwin Watercolours</h1>
-  </header>
+  <div class="site-wrapper">
+    <header>
+      <h1>Simon Goodwin Watercolours</h1>
+    </header>
 
-  <section class="about">
-    <h2>About the Artist</h2>
-    <p>
-      Simon is a UK watercolour artist based in Orford, Suffolk.
-    </p>
-  </section>
+    <section class="about">
+      <h2>About the Artist</h2>
+      <p>Simon is a UK watercolour artist based in Orford, Suffolk.</p>
+    </section>
 
   <main class="gallery">
-    <figure class="fade-in">
-      <img src="IMG_8550.png" alt="Watercolour painting 1" loading="lazy" />
-      <figcaption>‘A Moment in March’</figcaption>
-    </figure>
+      <figure class="fade-in">
+        <img src="IMG_8550.png" alt="A Moment in March" loading="lazy" />
+        <figcaption>‘A Moment in March’</figcaption>
+      </figure>
 
   <figure class="fade-in">
-      <img src="IMG_8501.png" alt="Watercolour painting 2" loading="lazy" />
+      <img src="IMG_8501.png" alt="Starlings Leave the Tree Line" loading="lazy" />
       <figcaption>‘Starlings Leave the Tree Line’</figcaption>
     </figure>
 
 <figure class="fade-in">
-      <img src="IMG_8628.png" alt="Watercolour painting 3" loading="lazy" />
+      <img src="IMG_8628.png" alt="An Angler Waits in Aldeburgh Bay" loading="lazy" />
       <figcaption>‘An Angler Waits in Aldeburgh Bay’</figcaption>
     </figure>
 
    <figure class="fade-in">
-      <img src="IMG_8379.png" alt="Watercolour painting 4" loading="lazy" />
+      <img src="IMG_8379.png" alt="Iken Marsh, Evening Light" loading="lazy" />
       <figcaption>‘Iken Marsh, Evening Light’</figcaption>
     </figure>
 
  <figure class="fade-in">
-      <img src="IMG_8123.png" alt="Watercolour painting 5" loading="lazy" />
+      <img src="IMG_8123.png" alt="Close Up: ‘Iken Marsh, Evening Light’" loading="lazy" />
       <figcaption>Close Up: ‘Iken Marsh, Evening Light’</figcaption>
     </figure>
 
     <figure class="fade-in">
-      <img src="IMG_8094.png" alt="Watercolour painting 6" loading="lazy" />
+      <img src="IMG_8094.png" alt="Winter Tree Line" loading="lazy" />
       <figcaption>‘Winter Tree Line’</figcaption>
     </figure>
 
  <figure class="fade-in">
-      <img src="IMG_8630.png" alt="Watercolour painting 7" loading="lazy" />
+      <img src="IMG_8630.png" alt="Low Tide at Orford Quay" loading="lazy" />
       <figcaption>‘Low Tide at Orford Quay’</figcaption>
     </figure>
 
   <figure class="fade-in">
-      <img src="IMG_81234.png" alt="Watercolour painting 9" loading="lazy" />
+      <img src="IMG_81234.png" alt="Close Up: ‘Low Tide at Orford Quay’" loading="lazy" />
       <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
     </figure>
   </main>
-
+<footer>
+      <p>Interested in a painting or commission?</p>
+      <p>
+        Email: <a href="#" id="email">[click to reveal]</a><br />
+        Phone: <span id="phone">[click to reveal]</span>
+      </p>
+      <p>
+        📸 <a href="https://www.instagram.com/simonsimonralph" target="_blank" rel="noopener">
+          @simonsimonralph
+        </a>
+      </p>
+    </footer>
+  </div>
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll(".gallery img").forEach(img => {
-        img.addEventListener("click", () => {
-          const overlay = document.createElement("div")
-          overlay.style = `
-            position: fixed;
-            top: 0; left: 0;
-            width: 100vw; height: 100vh;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-          `
-          const fullImg = document.createElement("img")
-          fullImg.src = img.src
-          fullImg.style = "max-width: 90vw; max-height: 90vh; border-radius: 8px;"
-          overlay.appendChild(fullImg)
-          overlay.addEventListener("click", () => overlay.remove())
-          document.body.appendChild(overlay)
-        })
-      })
-    })
- <script>
-  // Modal zoom (existing)
-  document.addEventListener("DOMContentLoaded", () => {
+    // Modal zoom
     document.querySelectorAll(".gallery img").forEach(img => {
       img.addEventListener("click", () => {
         const overlay = document.createElement("div")
@@ -109,6 +95,20 @@
       })
     })
 
+    // Reveal email and phone
+    const email = "simnonralphgoodwin@gmail.com"
+    const phone = "+44 7307 163 308"
+
+    document.getElementById("email").addEventListener("click", e => {
+      e.preventDefault()
+      e.target.href = `mailto:${email}`
+      e.target.textContent = email
+    })
+
+    document.getElementById("phone").addEventListener("click", () => {
+      document.getElementById("phone").textContent = phone
+    })
+
     // Fade-in animation
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
@@ -122,33 +122,6 @@
     document.querySelectorAll(".fade-in").forEach(el => {
       observer.observe(el)
     })
-  })
-    // Contact reveal (anti-spam)
-const email = "simonralphgoodwin@gmail.com"
-const phone = "+44 7307 163 308"
-
-document.getElementById("email").addEventListener("click", e => {
-  e.preventDefault()
-  e.target.href = `mailto:${email}`
-  e.target.textContent = email
-})
-
-document.getElementById("phone").addEventListener("click", () => {
-  document.getElementById("phone").textContent = phone
-})
-
-</script>
- <footer>
-  <p>Interested in a painting or commission?</p>
-  <p>
-    Email: <a href="#" id="email">[click to reveal]</a><br />
-    Phone: <span id="phone">[click to reveal]</span>
-  </p>
-  <p>
-    📸 <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
-      @simonsimonralphralph
-    </a>
-  </p>
-</footer>
+  </script>
 </body>
 </html>
