--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p>Interested in a painting or commission?</p>
       <p>
         Email: <a href="#" id="email">[click to reveal]</a><br />
-        Phone: <span id="phone">[click to reveal]</span>
+        Phone: <a href="#" id="phone">[click to reveal]</a>
       </p>
       <p>
         📸 <a href="https://www.instagram.com/simonsimonralph" target="_blank" rel="noopener">
@@ -96,7 +96,7 @@
     })
 
     // Reveal email and phone
-    const email = "simnonralphgoodwin@gmail.com"
+    const email = "simonralphgoodwin@gmail.com"
     const phone = "+44 7307 163 308"
 
     document.getElementById("email").addEventListener("click", e => {
