--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon Goodwin is a watercolour artist based in Orford, Suffolk. His work explores the delicate relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting atmospheres with quiet intensity.</p>
+      <p>Simon Goodwin is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting moments with quiet intensity.</p>
     </section>
 
   <main class="gallery">
