--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         Phone: <a href="#" id="phone">[click to reveal]</a>
       </p>
       <p>
-        📸 <a href="https://www.instagram.com/simonsimonralph" target="_blank" rel="noopener">
-          @simonsimonralph
+        📸 <a href="https://www.instagram.com/simonsimonralphralph" target="_blank" rel="noopener">
+          @simonsimonralphralph
         </a>
       </p>
     </footer>
