--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="site-wrapper">
     <header>
-      <h1>Simon Goodwin Watercolours</h1>
+      <h1>Simon Ralph Goodwin Watercolours</h1>
     </header>
 
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon Goodwin is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting moments with quiet intensity.</p>
+      <p>Simon is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting moments with quiet intensity.</p>
     </section>
 
   <main class="gallery">
