--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
   <div class="site-wrapper">
     <header>
-      <h1>Simon Ralph Goodwin Watercolours</h1>
-    </header>
+  <h1>
+    Simon Ralph Goodwin<br />
+    <em>Watercolours</em>
+  </h1>
+</header>
+
 
     <section class="about">
       <h2>About the Artist</h2>
