--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
   <div class="site-wrapper">
     <header>
+  <header>
   <h1>
     Simon Ralph Goodwin<br />
     <em>Watercolours</em>
   </h1>
+  <hr class="header-divider" />
+</header>
+
 </header>
 
 
