--- a/index.html
+++ b/index.html
@@ -22,47 +22,48 @@
       <p>Simon is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting moments with quiet intensity.</p>
     </section>
 
-  <main class="gallery">
-      <figure class="fade-in">
-        <img src="IMG_8550.png" alt="A Moment in March" loading="lazy" />
-        <figcaption>‘A Moment in March’</figcaption>
-      </figure>
+<main class="gallery">
+  <figure class="fade-in">
+    <img src="IMG_8550.png" alt="A Moment in March" loading="lazy" />
+    <figcaption><em>A Moment in March.</em></figcaption>
+  </figure>
 
   <figure class="fade-in">
-      <img src="IMG_8501.png" alt="Starlings Leave the Tree Line" loading="lazy" />
-      <figcaption>‘Starlings Leave the Tree Line’</figcaption>
-    </figure>
-
-<figure class="fade-in">
-      <img src="IMG_8628.png" alt="An Angler Waits in Aldeburgh Bay" loading="lazy" />
-      <figcaption>‘An Angler Waits in Aldeburgh Bay’</figcaption>
-    </figure>
-
-   <figure class="fade-in">
-      <img src="IMG_8379.png" alt="Iken Marsh, Evening Light" loading="lazy" />
-      <figcaption>‘Iken Marsh, Evening Light’</figcaption>
-    </figure>
-
- <figure class="fade-in">
-      <img src="IMG_8123.png" alt="Close Up: ‘Iken Marsh, Evening Light’" loading="lazy" />
-      <figcaption>Close Up: ‘Iken Marsh, Evening Light’</figcaption>
-    </figure>
-
-    <figure class="fade-in">
-      <img src="IMG_8094.png" alt="Winter Tree Line" loading="lazy" />
-      <figcaption>‘Winter Tree Line’</figcaption>
-    </figure>
-
- <figure class="fade-in">
-      <img src="IMG_8630.png" alt="Low Tide at Orford Quay" loading="lazy" />
-      <figcaption>‘Low Tide at Orford Quay’</figcaption>
-    </figure>
+    <img src="IMG_8501.png" alt="Starlings Leave the Tree Line" loading="lazy" />
+    <figcaption><em>Starlings Leave the Tree Line.</em></figcaption>
+  </figure>
 
   <figure class="fade-in">
-      <img src="IMG_81234.png" alt="Close Up: ‘Low Tide at Orford Quay’" loading="lazy" />
-      <figcaption>Close Up: ‘Low Tide at Orford Quay’</figcaption>
-    </figure>
-  </main>
+    <img src="IMG_8628.png" alt="An Angler Waits in Aldeburgh Bay" loading="lazy" />
+    <figcaption><em>An Angler Waits in Aldeburgh Bay.</em></figcaption>
+  </figure>
+
+  <figure class="fade-in">
+    <img src="IMG_8379.png" alt="Iken Marsh, Evening Light" loading="lazy" />
+    <figcaption><em>Iken Marsh, Evening Light.</em></figcaption>
+  </figure>
+
+  <figure class="fade-in">
+    <img src="IMG_8123.png" alt="Close Up: Iken Marsh, Evening Light" loading="lazy" />
+    <figcaption><em>Close Up: Iken Marsh, Evening Light.</em></figcaption>
+  </figure>
+
+  <figure class="fade-in">
+    <img src="IMG_8094.png" alt="Winter Tree Line" loading="lazy" />
+    <figcaption><em>Winter Tree Line.</em></figcaption>
+  </figure>
+
+  <figure class="fade-in">
+    <img src="IMG_8630.png" alt="Low Tide at Orford Quay" loading="lazy" />
+    <figcaption><em>Low Tide at Orford Quay.</em></figcaption>
+  </figure>
+
+  <figure class="fade-in">
+    <img src="IMG_81234.png" alt="Close Up: Low Tide at Orford Quay" loading="lazy" />
+    <figcaption><em>Close Up: Low Tide at Orford Quay.</em></figcaption>
+  </figure>
+</main>
+
 <footer>
       <p>Interested in a painting or commission?</p>
       <p>
