--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between light and landscape, drawing on memory, instinct, and imagination to capture fleeting moments with quiet intensity.</p>
+      <p>Simon is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between luminosity and landscape — drawing on memory, instinct, and intuition to capture light's fleeting moments with quiet intensity.</p>
     </section>
 
 <main class="gallery">
