--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </figure>
 
   <figure class="fade-in">
-    <img src="IMG_8501.png" alt="Starlings Leave the Tree Line" loading="lazy" />
+    <img src="IMG_8550.jpeg" alt="Starlings Leave the Tree Line" loading="lazy" />
     <figcaption><em>Starlings Leave the Tree Line.</em></figcaption>
   </figure>
 
