--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </main>
 
 <footer>
-      <p>Interested in a painting or commission?</p>
+      <p>Contact for enquiries or commissions</p>
       <p>
         Email: <a href="#" id="email">[click to reveal]</a><br />
         Phone: <a href="#" id="phone">[click to reveal]</a>
