--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon is a watercolour artist based in Orford, Suffolk. Working on 7" x 10" paper, his work explores the relationship between luminosity and landscape — drawing on memory, instinct, and intuition to capture light's fleeting moments with quiet intensity.</p>
+      <p>Simon is a watercolour artist based in Orford, Suffolk. Working mostly on 7" x 10" paper, his work explores luminosity and landscape — drawing from memories and dreams — letting light narrate the scene with quiet intesity.</p>
     </section>
 
 <main class="gallery">
