--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&family=IBM+Plex+Serif:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simon Ralph Goodwin 
     Watercolours</title>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&family=IBM+Plex+Serif:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="site-wrapper">
@@ -19,7 +19,7 @@
 </header>
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon is a watercolour artist based in Orford, Suffolk. Working mostly on 7" x 10" paper, his work explores luminosity and landscape — drawing from memories and dreams — letting light narrate the scene with quiet intesity.</p>
+      <p>Simon is a watercolour artist based in Orford, Suffolk. Working mostly on 7" x 10" cotton paper, his work explores luminosity and landscape — allowing a single moment of light to narrate the painting.</p>
     </section>
 
 <main class="gallery">
