--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simon Ralph Goodwin 
-    Watercolours</title>
+    Watercolour</title>
 </head>
 <body>
   <div class="site-wrapper">
    <header>
   <h1>
     Simon Ralph Goodwin<br />
-    <em>Watercolours</em>
+    <em>Watercolour</em>
   </h1>
   <hr class="header-divider" />
 </header>
