--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <<head>
+  <meta name="description" content="Simon Ralph Goodwin is a watercolour artist based in Orford, Suffolk. His work captures fleeting moments of light and landscape through delicate, luminous paintings." />
+<meta name="keywords" content="Simon Ralph Goodwin, Suffolk artist, Orford painter, watercolour artist, contemporary watercolour, UK landscape painting" />
+<meta name="author" content="Simon Ralph Goodwin" />
   <title>Simon Ralph Goodwin – Watercolour</title>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
