--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
     <section class="about">
       <h2>About the Artist</h2>
-      <p>Simon is a watercolour artist based in Orford, Suffolk. Working mostly on 7" x 10" cotton paper, his work explores luminosity and landscape — allowing a fleeting moment of light to narrate the painting.</p>
+      <p>Simon is a watercolour artist based in Orford, Suffolk. Working mostly on 7" x 10" cotton paper, his work explores luminosity and landscape — how a moment of light can narrate the scene.</p>
     </section>
 
 <main class="gallery">
