--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </figure>
 
   <figure class="fade-in">
-    <img src="IMG_8628.png" alt="An Angler Waits in Aldeburgh Bay" loading="lazy" />
+    <img src="AnglerWaits.png" alt="An Angler Waits in Aldeburgh Bay" loading="lazy" />
     <figcaption><em>An Angler Waits in Aldeburgh Bay.</em></figcaption>
   </figure>
 
