--- a/index.html
+++ b/index.html
@@ -135,6 +135,20 @@
       observer.observe(el)
     })
   })
+    <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const images = document.querySelectorAll(".gallery img");
+
+    images.forEach(img => {
+      if (img.complete) {
+        img.classList.add("loaded");
+      } else {
+        img.addEventListener("load", () => {
+          img.classList.add("loaded");
+        });
+      }
+    });
+  });
 </script>
 </body>
 </html>
