--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       observer.observe(el)
     })
   })
-    <script>
-  document.addEventListener("DOMContentLoaded", function () {
+  
+// Fade-in on image load
     const images = document.querySelectorAll(".gallery img");
 
     images.forEach(img => {
