--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </figure>
 
   <figure class="fade-in">
-    <img src="IMG_8379.png" alt="Iken Marsh, Evening Light" loading="lazy" />
+    <img src="IkenCliff.png" alt="Iken Marsh, Evening Light" loading="lazy" />
     <figcaption><em>Iken Marsh, Evening Light.</em></figcaption>
   </figure>
 
